# oficina-api-unicap-2026

./: .gitignore  Arquitetura da API Express.md  Passo a passo API.md  package-lock.json  package.json  tsconfig.txt
api-fastapi/: passo a passo api python.md  pyproject.toml
api-fastapi/front-end/: index.html
api-fastapi/src/: database.py  main.py  models.py  routes.py
front-end/: index.html
prisma/: schema.prisma
prisma/migrations/20260501225305_init/: migration.sql
prisma/migrations/20260501225642_init/: migration.sql
src/: server.ts
src/controller/: movieController.ts
src/database/: prismaClient.ts
src/routes/: movieRoutes.ts
src/services/: movieServices.ts
